force-app/main/default/objects/Account/fields/Account_Catalyst_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Catalyst_Health_Score__c</fullName>
    <description>MIS-6185</description>
    <label>Account Catalyst Health Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>