force-app/main/default/objects/Account/fields/Account_Catalyst_Health_Score_FR_Color__c.field-meta.xml
<CustomField>
    <fullName>Account_Catalyst_Health_Score_FR_Color__c</fullName>
    <description>MIS-6521</description>
    <formula>TEXT(Account_Catalyst_Health_Score__c)&amp;&quot; &quot;&amp;
IF( 
				Account_Catalyst_Health_Score__c &gt; 8, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xFo5&quot;, &quot;green&quot;, 16, 50 ),
				IF(
							Account_Catalyst_Health_Score__c &gt; 4, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xWeC&quot;, &quot;yellow&quot;, 16, 50 ),
							IF(
											Account_Catalyst_Health_Score__c &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xFpH&quot;, &quot;red&quot; , 16, 50), NULL
											)
							)
				)</formula>
    <label>Account Catalyst Health Score</label>
    <type>Text</type>
</CustomField>