force-app/main/default/objects/Account/fields/Account_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Collection_Status__c</fullName>
    <description>MIS-5165</description>
    <label>Account Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Time</fullName>
                <default>true</default>
                <label>On Time</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Debooked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>