force-app/main/default/objects/Account/fields/Account_Completion__c.field-meta.xml
<CustomField>
    <fullName>Account_Completion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Account Completion %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>