force-app/main/default/objects/Account/fields/Account_Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Account_Completion_Rate__c</fullName>
    <formula>IF(Account_Completion__c *10000&lt;30 , &quot;Less than 30% completed&quot; &amp; BR() &amp; IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004Y4YH&quot;,&quot;Less than 30%&quot;), 
IF(Account_Completion__c *10000&lt;60 ,&quot;Less than 60% completed&quot; &amp; BR() &amp; IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004Y4YM&quot;,&quot;Less than 60%&quot;), 
IF(Account_Completion__c *10000&lt;80 , &quot;Less than 80% completed&quot; &amp; BR() &amp; IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004Y4YR&quot;,&quot;Less than 80%&quot;), 
IF(Account_Completion__c *10000&lt;99 , &quot;Less than 100% completed&quot; &amp; BR() &amp; IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004Y4YW&quot;,&quot;Less than 100%&quot;), 
&quot;Perfect&quot; &amp; BR() &amp; 
IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004Y4Yb&quot;, &quot;Perfect&quot;)))))</formula>
    <label>Account Completion Rate</label>
    <type>Text</type>
</CustomField>