force-app/main/default/objects/Account/fields/Account_Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Hyperlink__c</fullName>
    <description>Account Name is clickable as a link to the Account</description>
    <formula>HYPERLINK( Link_to_Account__c ,  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Hyperlink</label>
    <type>Text</type>
</CustomField>