force-app/main/default/objects/Account/fields/Account_Owner_from_Flow__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_from_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Since there is an issue with placing the &quot;OwnerId&quot; standard field in screen Flow and use it in LEX page (SF known issue), we use a temp custom lookup field. This is only to capture the User in the Flow that will be the new Account Owner - MIS-1426</description>
    <label>Account Owner from Flow</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>