force-app/main/default/objects/Account/fields/Account_Owner_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Sub_Division__c</fullName>
    <formula>TEXT(Owner.Sub_Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Sub Division</label>
    <type>Text</type>
</CustomField>