force-app/main/default/objects/Account/fields/Account_Plan_link__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_link__c</fullName>
    <description>MIS-6333</description>
    <label>Account Plan link</label>
    <type>Url</type>
</CustomField>