force-app/main/default/objects/Account/fields/Account_Re_assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Re_assigned_Date__c</fullName>
    <description>The last date when the account owner was changed.
Populated by Account - All automations PB
Ticket #1060311</description>
    <label>Last Reassigned Date</label>
    <type>DateTime</type>
</CustomField>