force-app/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <formula>IF( BI_Data__r.Account_Scoring_Stars__c  = 0, IMAGE(&apos;/servlet/servlet.FileDownload?file=0150X000008ClzN&apos;,&apos;Zero&apos;),
IF(BI_Data__r.Account_Scoring_Stars__c =1, IMAGE(&apos;/servlet/servlet.FileDownload?file=0150X000008ClzO&apos;,&apos;One&apos;),
IF(BI_Data__r.Account_Scoring_Stars__c  =2, IMAGE(&apos;/servlet/servlet.FileDownload?file=0150X000008ClzP&apos;,&apos;Two&apos;),
IMAGE(&apos;/servlet/servlet.FileDownload?file=0150X000008ClzQ&apos;,&apos;Three&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Score</label>
    <type>Text</type>
</CustomField>