force-app/main/default/objects/Account/fields/Account_Score_number__c.field-meta.xml
<CustomField>
    <fullName>Account_Score_number__c</fullName>
    <description>Pull from &quot;final_score&quot; field in BI</description>
    <label>Account Score number Old field</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>