force-app/main/default/objects/Account/fields/Account_Source_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Formula__c</fullName>
    <formula>TEXT( AccountSource )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Source Formula</label>
    <type>Text</type>
</CustomField>