force-app/main/default/objects/Account/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <label>Account Stage old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researching Account</fullName>
            </value>
            <value>
                <fullName>Prospecting Account</fullName>
            </value>
            <value>
                <fullName>Account in Conversation</fullName>
            </value>
            <value>
                <fullName>Standby</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>