force-app/main/default/objects/Account/fields/Account_Stage_minus_90__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage_minus_90__c</fullName>
    <description>MIS-1027</description>
    <formula>LastActivityDate &gt;=TODAY()-90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Stage minus 90</label>
    <type>Checkbox</type>
</CustomField>