force-app/main/default/objects/Account/fields/Account_type__c.field-meta.xml
<CustomField>
    <fullName>Account_type__c</fullName>
    <description>MIS-2388</description>
    <label>Account type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Agency - Enterprise</fullName>
            </value>
            <value>
                <fullName>In-house - Enterprise</fullName>
            </value>
            <value>
                <fullName>Freelancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>