force-app/main/default/objects/Account/fields/AccountDomain__c.field-meta.xml
<CustomField>
    <fullName>AccountDomain__c</fullName>
    <label>AccountDomain</label>
    <type>TextArea</type>
</CustomField>