force-app/main/default/objects/Account/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <description>MIS-4519</description>
    <label>Action Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>