force-app/main/default/objects/Account/fields/Active_Rate__c.field-meta.xml
<CustomField>
    <fullName>Active_Rate__c</fullName>
    <description>MIS-4723</description>
    <formula>BI_Data__r.Active_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>