force-app/main/default/objects/Account/fields/Additional_Data_Issues__c.field-meta.xml
<CustomField>
    <fullName>Additional_Data_Issues__c</fullName>
    <description>MIS-7368</description>
    <label>Additional Data Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apps Android - Accuracy</fullName>
            </value>
            <value>
                <fullName>Apps Android - Coverage</fullName>
            </value>
            <value>
                <fullName>Apps IOS - Accuracy</fullName>
            </value>
            <value>
                <fullName>Apps IOS - Coverage</fullName>
            </value>
            <value>
                <fullName>KW</fullName>
            </value>
            <value>
                <fullName>Marketing Channels - Direct</fullName>
            </value>
            <value>
                <fullName>Marketing Channels - Display</fullName>
            </value>
            <value>
                <fullName>Marketing Channels - Email</fullName>
            </value>
            <value>
                <fullName>Marketing Channels - Organic</fullName>
            </value>
            <value>
                <fullName>Marketing Channels - Paid Search</fullName>
            </value>
            <value>
                <fullName>Marketing Channels - Rank tracker</fullName>
            </value>
            <value>
                <fullName>Marketing Channels - Referrals</fullName>
            </value>
            <value>
                <fullName>Not known data issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PPC Spend</fullName>
            </value>
            <value>
                <fullName>Rank Tracker</fullName>
            </value>
            <value>
                <fullName>Segments - Accuracy</fullName>
            </value>
            <value>
                <fullName>Shopper</fullName>
            </value>
            <value>
                <fullName>SI - Contacts</fullName>
            </value>
            <value>
                <fullName>SI - Firmographics</fullName>
            </value>
            <value>
                <fullName>SI - Other Data</fullName>
            </value>
            <value>
                <fullName>SI - Technographics</fullName>
            </value>
            <value>
                <fullName>Traffic &amp; Engagement - Accuracy</fullName>
            </value>
            <value>
                <fullName>Traffic &amp; Engagement - Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>