force-app/main/default/objects/Account/fields/Admetricks_Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Admetricks_Billing_Name__c</fullName>
    <label>Admetricks Billing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>