force-app/main/default/objects/Account/fields/Admetricks_CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>Admetricks_CRM_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>MIS-5295</inlineHelpText>
    <label>Old CRM ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>