force-app/main/default/objects/Account/fields/Agency_Network__c.field-meta.xml
<CustomField>
    <fullName>Agency_Network__c</fullName>
    <description>MIS-1235</description>
    <label>Agency Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>