force-app/main/default/objects/Account/fields/Agency_RECMA_information__c.field-meta.xml
<CustomField>
    <fullName>Agency_RECMA_information__c</fullName>
    <description>MIS-2109</description>
    <formula>HYPERLINK(&apos;https://docs.google.com/spreadsheets/d/106WMr-DV4nEf0_ZhxentJOrcukt07jwn/edit#gid=1569621201&apos;
, &apos;https://docs.google.com/spreadsheets/d/106WMr-DV4nEf0_ZhxentJOrcukt07jwn/edit#gid=1569621201&apos;
)</formula>
    <label>Agency RECMA information</label>
    <type>Text</type>
</CustomField>