force-app/main/default/objects/Account/fields/Always_Active__c.field-meta.xml
<CustomField>
    <fullName>Always_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will always be considered ACTIVE by routing rules</description>
    <label>Always Active</label>
    <type>Checkbox</type>
</CustomField>