force-app/main/default/objects/Account/fields/amazon_brand__c.field-meta.xml
<CustomField>
    <fullName>amazon_brand__c</fullName>
    <description>MIS-8218</description>
    <label>Amazon Brands</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>