force-app/main/default/objects/Account/fields/Analyze_Competition__c.field-meta.xml
<CustomField>
    <fullName>Analyze_Competition__c</fullName>
    <description>MIS-4656</description>
    <formula>BI_Data__r.Analyze_Competition__c</formula>
    <label>Analyze Competition</label>
    <type>Text</type>
</CustomField>