force-app/main/default/objects/Account/fields/Annual_Revenue_Max__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Max__c</fullName>
    <label>Annual Revenue Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>