force-app/main/default/objects/Account/fields/Annual_Revenue_Min__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Min__c</fullName>
    <label>Annual Revenue Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>