force-app/main/default/objects/Account/fields/App_Intelligence_Updated_by_Flow__c.field-meta.xml
<CustomField>
    <fullName>App_Intelligence_Updated_by_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp help Checkbox to monitor if the &quot;App Intelligence Overlap&quot; was flagged by the Before Save Flow. This is due to cases where Accounts were flagged with the wrong SW Industry (like &quot;Agency&quot;)</description>
    <label>App Intelligence Updated by Flow</label>
    <type>Checkbox</type>
</CustomField>