force-app/main/default/objects/Account/fields/Are_they_using_a_competitor__c.field-meta.xml
<CustomField>
    <fullName>Are_they_using_a_competitor__c</fullName>
    <label>Are they using a competitor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>