force-app/main/default/objects/Account/fields/ARR_Bucket__c.field-meta.xml
<CustomField>
    <fullName>ARR_Bucket__c</fullName>
    <formula>IF((
 (BI_Data__r.ARR__c&gt;=100000 &amp;&amp; 
 (Owner.Division=&apos;ENT CSM - Europe&apos;||Owner.Division=&apos;Global CSM - Europe&apos; ||Owner.Division=&apos;ENT CSM - France&apos;
 ||Owner.Division=&apos;ENT CSM - US&apos;|| Owner.Division=&apos;Global CSM - US&apos;|| Owner.Division=&apos;Global CSM - Investors&apos;
 ||Owner.Division=&apos;Reseller - Japan&apos;
 ||Owner.Division=&apos;Reseller - ANZ - Direct&apos;
 || Owner.Division=&apos;Global CSM - Agencies&apos;))
 ||
 (BI_Data__r.ARR__c&gt;=50000 &amp;&amp; (Owner.Division=&apos;Inside CSM - US&apos;||Owner.Division=&apos;Inside CSM - ROW&apos;)))
 ,&apos;Bucket 4&apos;,
 IF(
 ((BI_Data__r.ARR__c &gt;=50000&amp;&amp;BI_Data__r.ARR__c &lt;100000)&amp;&amp;
 (Owner.Division=&apos;ENT CSM - US&apos;|| Owner.Division=&apos;Global CSM - US&apos;|| Owner.Division=&apos;Global CSM - Investors&apos;
 ||Owner.Division=&apos;Reseller - Japan&apos;
 ||Owner.Division=&apos;Reseller - ANZ - Direct&apos;))
 ||
 ((BI_Data__r.ARR__c &gt;=45000&amp;&amp;BI_Data__r.ARR__c &lt;100000)&amp;&amp;(Owner.Division=&apos;ENT CSM - Europe&apos;||Owner.Division=&apos;Global CSM - Europe&apos; ||Owner.Division=&apos;ENT CSM - France&apos;))
 ||
 (BI_Data__r.ARR__c &gt;=40000&amp;&amp;BI_Data__r.ARR__c &lt;100000&amp;&amp;Owner.Division=&apos;Global CSM - Agencies&apos;)
 ||
 (BI_Data__r.ARR__c &gt;=30000&amp;&amp;BI_Data__r.ARR__c &lt;50000&amp;&amp;Owner.Division=&apos;Inside CSM - ROW&apos;)
 ||
 (BI_Data__r.ARR__c &gt;=25000&amp;&amp;BI_Data__r.ARR__c &lt;50000&amp;&amp;Owner.Division=&apos;Inside CSM - US&apos;)
 ,&apos;Bucket 3&apos;,
 IF(
 (BI_Data__r.ARR__c &gt;=0&amp;&amp;BI_Data__r.ARR__c &lt;20000&amp;&amp;
 (Owner.Division=&apos;Inside CSM - ROW&apos;
 ||Owner.Division=&apos;Reseller - ANZ - Direct&apos;
 ||Owner.Division=&apos;Global CSM - Agencies&apos;
 ||Owner.Division=&apos;ENT CSM - Europe&apos;||Owner.Division=&apos;Global CSM - Europe&apos; ||Owner.Division=&apos;ENT CSM - France&apos;
 ||Owner.Division=&apos;ENT CSM - US&apos;|| Owner.Division=&apos;Global CSM - US&apos;|| Owner.Division=&apos;Global CSM - Investors&apos;))
 ||
 (BI_Data__r.ARR__c &gt;=0&amp;&amp;BI_Data__r.ARR__c &lt;12000&amp;&amp;Owner.Division=&apos;Inside CSM - US&apos;)
 ||
 (BI_Data__r.ARR__c &gt;=0&amp;&amp;BI_Data__r.ARR__c &lt;30000&amp;&amp;Owner.Division=&apos;Reseller - Japan&apos;)
 ,&apos;Bucket 1&apos;,
 IF(
 (BI_Data__r.ARR__c &gt;=20000&amp;&amp;BI_Data__r.ARR__c &lt;45000&amp;&amp;
 (Owner.Division=&apos;ENT CSM - Europe&apos;||Owner.Division=&apos;Global CSM - Europe&apos; ||Owner.Division=&apos;ENT CSM - France&apos;))
 ||
 (BI_Data__r.ARR__c &gt;=30000&amp;&amp;BI_Data__r.ARR__c &lt;50000&amp;&amp;Owner.Division=&apos;Reseller - Japan&apos;)
 ||
 (BI_Data__r.ARR__c &gt;=20000&amp;&amp;BI_Data__r.ARR__c &lt;40000&amp;&amp;Owner.Division=&apos;Global CSM - Agencies&apos;)
 ||
 (BI_Data__r.ARR__c &gt;=12000&amp;&amp;BI_Data__r.ARR__c &lt;25000&amp;&amp;Owner.Division=&apos;Inside CSM - US&apos;)
 ||
 (BI_Data__r.ARR__c &gt;=20000&amp;&amp;BI_Data__r.ARR__c &lt;30000&amp;&amp;Owner.Division=&apos;Inside CSM - ROW&apos;)
 ||
 (BI_Data__r.ARR__c &gt;=20000&amp;&amp;BI_Data__r.ARR__c &lt;50000&amp;&amp;(Owner.Division=&apos;Reseller - ANZ - Direct&apos;
 ||Owner.Division=&apos;ENT CSM - US&apos;|| Owner.Division=&apos;Global CSM - US&apos;|| Owner.Division=&apos;Global CSM - Investors&apos;))
 ,&apos;Bucket 2&apos;,NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR Bucket</label>
    <type>Text</type>
</CustomField>