force-app/main/default/objects/Account/fields/ARR_Bucket_Region__c.field-meta.xml
<CustomField>
    <fullName>ARR_Bucket_Region__c</fullName>
    <formula>CASE(
Owner_Division__c,
&apos;ENT CSM - US&apos;,&apos;NA Ent/Strat&apos;,
&apos;Global CSM - US&apos;, &apos;NA Ent/Strat&apos;,
&apos;Global CSM - Investors&apos;, &apos;NA Ent/Strat&apos;,
&apos;Inside CSM - US&apos;, &apos;NA Inside&apos;,
&apos;Inside CSM - ROW&apos;, &apos;ROW&apos;,
&apos;ENT CSM - Europe&apos;, &apos;Europe&apos;,
&apos;Global CSM - Europe&apos;, &apos;Europe&apos;,
&apos;ENT CSM - France&apos;, &apos;Europe&apos;,
&apos;Global CSM - Agencies&apos;, &apos;Agency&apos;,
&apos;Reseller - ANZ - Direct&apos;, &apos;ANZ Direct&apos;,
&apos;Reseller - Japan&apos;, &apos;Japan Direct&apos;,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR Bucket Region</label>
    <type>Text</type>
</CustomField>