force-app/main/default/objects/Account/fields/ARR_Rank_Ranger__c.field-meta.xml
<CustomField>
    <fullName>ARR_Rank_Ranger__c</fullName>
    <description>temp field to hold Rank Ranger ARR, would be deleted after full migration.</description>
    <inlineHelpText>to be used only for Rank Ranger accounts</inlineHelpText>
    <label>ARR - Rank Ranger</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>