force-app/main/default/objects/Account/fields/Asset_Score__c.field-meta.xml
<CustomField>
    <fullName>Asset_Score__c</fullName>
    <description>MIS-4723</description>
    <formula>BI_Data__r.Asset_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Score</label>
    <type>Text</type>
</CustomField>