force-app/main/default/objects/Account/fields/Assigned_CSA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSA__c</fullName>
    <description>MIS-4093 - changed Label to CSM
MIS-633</description>
    <label>Assigned CSM</label>
    <length>35</length>
    <type>Text</type>
</CustomField>