force-app/main/default/objects/Account/fields/Assigned_CSA_email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSA_email__c</fullName>
    <description>MIS-4093 - changed Label to CSM
MIS-285</description>
    <formula>Assigned_CSA_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned CSM email</label>
    <type>Text</type>
</CustomField>