force-app/main/default/objects/Account/fields/Assigned_CSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSA_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-4970 - changed Label to Account CS
MIS-4093 - changed Label to CSM
MIS-285 Will be populated manually (Old)
MIS-633 Will be populated from the field &apos;Assigned CSA&apos; (New)</description>
    <label>Account CS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>