force-app/main/default/objects/Account/fields/Auto_Renewal_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MQ-2061</description>
    <label>Auto Renewal Subscription</label>
    <type>Checkbox</type>
</CustomField>