force-app/main/default/objects/Account/fields/AutoAlwaysActive__c.field-meta.xml
<CustomField>
    <fullName>AutoAlwaysActive__c</fullName>
    <formula>Owner.UserRoleId=&quot;00Eb0000000aCj1&quot; || Owner.UserRoleId=&quot;00Eb0000000aDZg&quot; ||
Owner.UserRoleId=&quot;00Eb0000000aF9a&quot; || Owner.UserRoleId=&quot;00Eb0000000aF8X&quot; ||
Owner.UserRoleId=&quot;00Eb0000000t8ab&quot; || Owner.UserRoleId=&quot;00Eb0000000xK2K&quot; ||
Owner.UserRoleId=&quot;00Eb0000000aF8m&quot; || Owner.UserRoleId=&quot;00Eb0000000aEmC&quot; ||
Owner.UserRoleId=&quot;00Eb0000000t99i&quot; || Owner.UserRoleId=&quot;00Eb0000000tAA4&quot; ||
Owner.UserRoleId=&quot;00Eb0000000t9M3&quot; || Owner.UserRoleId=&quot;00Eb0000000aF8S&quot; ||
Owner.UserRoleId=&quot;00Eb0000000aDZW&quot; || Owner.UserRoleId=&quot;00Eb0000000t9U3&quot; ||
Owner.UserRoleId=&quot;00Eb0000000tAB7&quot; || Owner.UserRoleId=&quot;00Eb0000000aL6m&quot; ||
Owner.UserRoleId=&quot;00Eb0000000aLOg&quot; || Owner.UserRoleId=&quot;00Eb0000000aLOb&quot; ||
Owner.UserRoleId=&quot;00Eb00000011ogu&quot; || Owner.UserRoleId=&quot;00Eb0000000fQjp&quot; ||
Owner.UserRoleId=&quot;00Eb0000000Ymou&quot; || Owner.UserRoleId=&quot;00E0O000002G8IC&quot; ||
Owner.UserRoleId=&quot;00E0O000002G8IR&quot; || Owner.UserRoleId=&quot;00E0O000002G8Il&quot; ||
Owner.UserRoleId=&quot;00E0O000002G8Il&quot; || Owner.UserRoleId=&quot;00E0O000002G8J5&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AutoAlwaysActive</label>
    <type>Checkbox</type>
</CustomField>