force-app/main/default/objects/Account/fields/Automatic_renewal_excluded_from_T_Cs__c.field-meta.xml
<CustomField>
    <fullName>Automatic_renewal_excluded_from_T_Cs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-1230</description>
    <label>Automatic renewal excluded from T&amp;Cs</label>
    <type>Checkbox</type>
</CustomField>