force-app/main/default/objects/Account/fields/Average_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Confidence_Score__c</fullName>
    <description>MIS-4422</description>
    <label>Average Confidence Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>