force-app/main/default/objects/Account/fields/BankDetials__c.field-meta.xml
<CustomField>
    <fullName>BankDetials__c</fullName>
    <label>Bank Detials</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>