force-app/main/default/objects/Account/fields/Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Base_Product__c</fullName>
    <label>Base Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>