force-app/main/default/objects/Account/fields/Base_Product_help_field__c.field-meta.xml
<CustomField>
    <fullName>Base_Product_help_field__c</fullName>
    <formula>If((Base_Product__c&lt;&gt;BI_Data__r.Base_Product__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Product help field</label>
    <type>Checkbox</type>
</CustomField>