force-app/main/default/objects/Account/fields/Base_Products_Multi_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Base_Products_Multi_Subscriptions__c</fullName>
    <description>MIS-4452</description>
    <label>Base Products - Multi Subscriptions</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>