force-app/main/default/objects/Account/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>